metadata-retriever/metadata/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Activity_Type__c</fullName>
        <label>Activity Type</label>
        <picklist>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appointment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealership Promotion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dinner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exhibition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow-up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Golf</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grand Prix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Launch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Motor Show</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Communication_Method__c</fullName>
        <label>Communication Method</label>
        <picklist>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Face2Face</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web Site</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Communication_Type__c</fullName>
        <label>Communication Type</label>
        <picklist>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feedback</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gen. Note</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inbound</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outbound</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ToDo</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dealership_Sales_Person__c</fullName>
        <label>Dealership/Sales Person</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Due_Task_Notification__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Due Task Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Home_Phone__c</fullName>
        <label>Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Intention_Status__c</fullName>
        <label>Intention Status</label>
        <picklist>
            <picklistValues>
                <fullName>Hand Back</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade In</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retain Payout</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retain Refinance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quoted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LDCL_Comms_Id__c</fullName>
        <externalId>true</externalId>
        <label>LDCL Comms Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Notification_Email_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notification Email Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notification_Email_Time__c</fullName>
        <label>Notification Email Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Other_Activity__c</fullName>
        <label>Other Activity</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outcome__c</fullName>
        <label>Outcome</label>
        <picklist>
            <picklistValues>
                <fullName>Decision Maker - Meaningful Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decision Maker - Follow Up Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Decision Maker - Call again later</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Answer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact Details Invalid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow Up Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Left Message</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test Drive Booked</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Initial Attempt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2nd Attempt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3rd Attempt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quote Follow Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enquiry Follow Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scheduled Call Back</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Enquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Follow up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Follow up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Contact</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Resource_Required__c</fullName>
        <label>Resource Required</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Source_System__c</fullName>
        <label>Source System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Phone__c</fullName>
        <label>Work Phone</label>
        <type>Phone</type>
    </fields>
    <listViews>
        <fullName>Assigned_Annual_Call_Tasks</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>Effective_Date__c</columns>
        <columns>TASK.STATUS</columns>
        <columns>Mobile__c</columns>
        <columns>Work_Phone__c</columns>
        <columns>Home_Phone__c</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Task.Annual_Call</value>
        </filters>
        <filters>
            <field>TASK.STATUS</field>
            <operation>equals</operation>
            <value>Not Started,In Progress,Waiting for someone else,Deferred</value>
        </filters>
        <label>Assigned Annual Call Tasks</label>
        <sharedTo>
            <role>Customer_Retention_Office_1</role>
            <role>Customer_Retention_Office_2</role>
            <role>Customer_Retention_Office_3</role>
            <role>Customer_Retention_Office_4</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Assigned_EOC_Call_Tasks</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>Effective_Date__c</columns>
        <columns>TASK.STATUS</columns>
        <columns>Mobile__c</columns>
        <columns>Work_Phone__c</columns>
        <columns>Home_Phone__c</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Task.EOC_Call</value>
        </filters>
        <filters>
            <field>TASK.STATUS</field>
            <operation>equals</operation>
            <value>Not Started,In Progress,Waiting for someone else,Deferred</value>
        </filters>
        <label>Assigned EOC Call Tasks</label>
        <sharedTo>
            <role>Customer_Retention_Office_1</role>
            <role>Customer_Retention_Office_2</role>
            <role>Customer_Retention_Office_3</role>
            <role>Customer_Retention_Office_4</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Assigned_Welcome_Call_Tasks</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>Effective_Date__c</columns>
        <columns>TASK.STATUS</columns>
        <columns>Mobile__c</columns>
        <columns>Work_Phone__c</columns>
        <columns>Home_Phone__c</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Task.Welcome_Call</value>
        </filters>
        <filters>
            <field>TASK.STATUS</field>
            <operation>equals</operation>
            <value>Not Started,In Progress,Waiting for someone else,Deferred</value>
        </filters>
        <label>Assigned Welcome Call Tasks</label>
        <sharedTo>
            <role>Customer_Retention_Office_1</role>
            <role>Customer_Retention_Office_2</role>
            <role>Customer_Retention_Office_3</role>
            <role>Customer_Retention_Office_4</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyActivities</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>Effective_Date__c</columns>
        <columns>TASK.STATUS</columns>
        <columns>Mobile__c</columns>
        <columns>Work_Phone__c</columns>
        <columns>Home_Phone__c</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Task.Welcome_Call,Task.Annual_Call,Task.EOC_Call</value>
        </filters>
        <filters>
            <field>TASK.STATUS</field>
            <operation>equals</operation>
            <value>Not Started,In Progress,Waiting for someone else,Deferred</value>
        </filters>
        <label>My Activities</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>Effective_Date__c</columns>
        <columns>TASK.STATUS</columns>
        <columns>Mobile__c</columns>
        <columns>Work_Phone__c</columns>
        <columns>Home_Phone__c</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Team</filterScope>
        <filters>
            <field>TASK.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Task.Welcome_Call,Task.Annual_Call,Task.EOC_Call</value>
        </filters>
        <filters>
            <field>TASK.STATUS</field>
            <operation>equals</operation>
            <value>Not Started,In Progress,Waiting for someone else,Deferred</value>
        </filters>
        <label>My Team&apos;s Activities</label>
        <sharedTo>
            <role>Remarketing_Team_Lead</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>Effective_Date__c</columns>
        <columns>TASK.STATUS</columns>
        <columns>Mobile__c</columns>
        <columns>Work_Phone__c</columns>
        <columns>Home_Phone__c</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <filters>
            <field>TASK.STATUS</field>
            <operation>equals</operation>
            <value>Not Started,In Progress,Waiting for someone else,Deferred</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>Unassigned_Tasks</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>Effective_Date__c</columns>
        <columns>TASK.STATUS</columns>
        <columns>Mobile__c</columns>
        <columns>Work_Phone__c</columns>
        <columns>Home_Phone__c</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Team</filterScope>
        <filters>
            <field>TASK.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Task.Welcome_Call,Task.Annual_Call,Task.EOC_Call</value>
        </filters>
        <filters>
            <field>OWNER_ROLE</field>
            <operation>equals</operation>
            <value>Remarketing Team Lead</value>
        </filters>
        <filters>
            <field>TASK.STATUS</field>
            <operation>equals</operation>
            <value>Not Started,In Progress,Waiting for someone else,Deferred</value>
        </filters>
        <label>Unassigned Tasks</label>
        <sharedTo>
            <role>Remarketing_Team_Lead</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <filters>
            <field>TASK.STATUS</field>
            <operation>equals</operation>
            <value>Not Started,In Progress,Waiting for someone else,Deferred</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>